Stream from array and object

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
 <div id="app">
-    <button id="btn">Click Me</button>
-    <hr>
-    <input type="text" id="input">
-    <div id="text"></div>
+<ul id="list"></ul>
 </div>
 <script type="module" src="/main.js"></script>
 </body>
