--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="app">
-<ul id="list"></ul>
+    <input type="text">
 </div>
 <script type="module" src="/main.js"></script>
 </body>
